# rs_test_psql_sqlx

./: Cargo.toml
.github/workflows/: dev.yml  dev_db.yml
migrations/: 20221031005605_create_user_table.sql
scripts/: init_db.sh
src/: main.rs
